monticore-generator/src/test/resources/cocos/invalid/A4062/A4062a.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4062;

grammar A4062a {

  A = "b-";

  splittoken "b-";

}
